bin/testsuite/tests/compiler/src/errors/compiler4229.swg
#global testerror "Err0033"

#[Swag.Inline, Swag.NoInline]
func toto() => 0
